63875--Fix bleeding table styles on date pickup popup
https://project.mediacurrent.com/slactoday/node/63875

The date picker popup on search page was showing symptoms that originated
from base table styles.  Corrected by reseting text color back to default
and also resetting width of first td back to default.

mario h.

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -7572,6 +7572,13 @@ fieldset.collapsed {
     color: #316dae;
   }
 }
+.page-search table td:first-child {
+  width: inherit;
+}
+.page-search table th {
+  color: inherit;
+}
+
 .page-search .views-exposed-form .views-exposed-widget {
   float: none;
 }
